docfiles = \
	body.rfc5173.txt
	collation.rfc4790.txt
	copy.rfc3894.txt
	draft-degener-sieve-multiscript-00.txt
	draft-duerst-mailto-bis-05.txt
	draft-ietf-sieve-include-05.txt
	draft-murchison-sieve-regex-07.txt
	editheader.rfc5293.txt
	environment.rfc5183.txt
	ihave.rfc5463.txt
	imail.rfc2822.txt
	imap4flags.rfc5232.txt
	mailto.rfc2368.txt
	managesieve.rfc5804.txt
	notify-mailto.rfc5436.txt
	notify.rfc5435.txt
	reject-ereject.rfc5429.txt
	relational.rfc5231.txt
	sieve.rfc5228.txt
	spamvirustest.rfc5235.txt
	spec-bosch-sieve-duplicate.txt
	subaddress.rfc5233.txt
	uri.rfc3986.txt
	utf-8.rfc3629.txt
	vacation.rfc5230.txt
	vacation-seconds.rfc6131.txt
	variables.rfc5229.txt

EXTRA_DIST = \
	$(docfiles)

